[tool.poetry]
name = "uac"
version = "0.1.0"
description = ""
authors = ["Ruslan Aliyev <aliyev.r@webglsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.1"
passlib = "^1.7.4"
datetime = "^5.2"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
